--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<html>
+<head>
+    <link rel="stylesheet" href="style.css">
+    <title>Пухнасті Тваринки</title>
+</head>
+<body>
+    <header>
+        <h1>Ласкаво просимо на сайт про пухнастих тваринок!</h1>
+    </header>
+    <main>
+        <h2>Наші Герої</h2>
+        
+        <img class="animal" src="fluffy1.jpg">
+        <h3>Милуємося кроликом</h3>
+        <p>Зустрічайте нашого пухнастого друга - кролика Флуффі! Він обожнює грати та гладити його м'якеньке вушко.</p>
+
+        <img class="animal" src="fluffy2.jpg">
+        <h3>У нас єнотик Рекс</h3>
+        <p>Рекс - наш веселий єнотик. Він вміє відкривати коробки, розпаковувати подарунки та завжди готовий до пригод.</p>
+        
+        <!-- Додайте інші картки пухнастих тваринок за бажанням -->
+    </main>
+    <footer>
+        <p>&copy; 2023 Пухнасті Тваринки. Всі права захищені.</p>
+    </footer>
+</body>
+</html>
 
